{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 141,
  "lineage": "9ff8140c-54a2-c5f3-7b32-c3d46480a773",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sherlihy_dot_com-pvts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001ba1529dbccb9cc",
            "arn": "arn:aws:ec2:eu-west-2:111644099040:instance/i-07a406954e6750703",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a406954e6750703",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abb9f2d64f1a96e2",
            "private_dns": "ip-10-0-1-176.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dcfe94afe60bace6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b47f976e678ffd7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0718cd160dd2781a9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_page-lb_test",
            "aws_subnet.privates",
            "aws_vpc.lb_test",
            "data.aws_ami.sherlihy_dot_com-lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001ba1529dbccb9cc",
            "arn": "arn:aws:ec2:eu-west-2:111644099040:instance/i-00da6375f319567ce",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00da6375f319567ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c23fdbac9d1968e",
            "private_dns": "ip-10-0-3-40.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af892ca74246af1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3890a23c571bac2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0718cd160dd2781a9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_page-lb_test",
            "aws_subnet.privates",
            "aws_vpc.lb_test",
            "data.aws_ami.sherlihy_dot_com-lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001ba1529dbccb9cc",
            "arn": "arn:aws:ec2:eu-west-2:111644099040:instance/i-08ce86803ce45d3c5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ce86803ce45d3c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7f3abc0a41dfa2d",
            "private_dns": "ip-10-0-5-90.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05bae3e2451950135",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9baff4fed2a8d57",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0718cd160dd2781a9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_page-lb_test",
            "aws_subnet.privates",
            "aws_vpc.lb_test",
            "data.aws_ami.sherlihy_dot_com-lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lb_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:internet-gateway/igw-0898116c3f9be1c65",
            "id": "igw-0898116c3f9be1c65",
            "owner_id": "111644099040",
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "dependencies": [
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:loadbalancer/app/lb-test/fc6108e374b53c12",
            "arn_suffix": "app/lb-test/fc6108e374b53c12",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-test-1422853556.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:loadbalancer/app/lb-test/fc6108e374b53c12",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fa302ae1ed34b8bb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d61403e2b75300a"
              },
              {
                "subnet_id": "subnet-03e79bf4c7f22266b"
              },
              {
                "subnet_id": "subnet-09054fdec55f55646"
              }
            ],
            "subnets": [
              "subnet-01d61403e2b75300a",
              "subnet-03e79bf4c7f22266b",
              "subnet-09054fdec55f55646"
            ],
            "vpc_id": "vpc-0cc42fd2aa2b0ac41",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.inet_access",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:listener/app/lb-test/fc6108e374b53c12/836c34bdb576b812",
            "certificate_arn": "arn:aws:acm:eu-west-2:111644099040:certificate/180c3701-3923-4407-9613-9d9a04d1dca9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:listener/app/lb-test/fc6108e374b53c12/836c34bdb576b812",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:loadbalancer/app/lb-test/fc6108e374b53c12",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb_test",
            "aws_lb_target_group.privates",
            "aws_security_group.inet_access",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d",
            "arn_suffix": "targetgroup/privates-tg/d53dd9b3a9b1bc4d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "privates-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "dependencies": [
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d-20231218131716314000000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d",
            "target_id": "i-07a406954e6750703"
          },
          "dependencies": [
            "aws_instance.sherlihy_dot_com-pvts",
            "aws_lb_target_group.privates",
            "aws_security_group.web_page-lb_test",
            "aws_subnet.privates",
            "aws_vpc.lb_test",
            "data.aws_ami.sherlihy_dot_com-lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d-20231218131716091800000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d",
            "target_id": "i-00da6375f319567ce"
          },
          "dependencies": [
            "aws_instance.sherlihy_dot_com-pvts",
            "aws_lb_target_group.privates",
            "aws_security_group.web_page-lb_test",
            "aws_subnet.privates",
            "aws_vpc.lb_test",
            "data.aws_ami.sherlihy_dot_com-lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d-20231218131716408500000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:111644099040:targetgroup/privates-tg/d53dd9b3a9b1bc4d",
            "target_id": "i-08ce86803ce45d3c5"
          },
          "dependencies": [
            "aws_instance.sherlihy_dot_com-pvts",
            "aws_lb_target_group.privates",
            "aws_security_group.web_page-lb_test",
            "aws_subnet.privates",
            "aws_vpc.lb_test",
            "data.aws_ami.sherlihy_dot_com-lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "inet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0898116c3f9be1c65",
            "id": "r-rtb-0f826f796569e3b3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f826f796569e3b3c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_route_table.inet_gw-publics",
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "inet_gw-publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:route-table/rtb-0f826f796569e3b3c",
            "id": "rtb-0f826f796569e3b3c",
            "owner_id": "111644099040",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "inet_gw-publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050522fcbb99de1c0",
            "route_table_id": "rtb-0f826f796569e3b3c",
            "subnet_id": "subnet-01d61403e2b75300a"
          },
          "dependencies": [
            "aws_route_table.inet_gw-publics",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2cd5d4492f787f9",
            "route_table_id": "rtb-0f826f796569e3b3c",
            "subnet_id": "subnet-03e79bf4c7f22266b"
          },
          "dependencies": [
            "aws_route_table.inet_gw-publics",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdca4e4a800edd14",
            "route_table_id": "rtb-0f826f796569e3b3c",
            "subnet_id": "subnet-09054fdec55f55646"
          },
          "dependencies": [
            "aws_route_table.inet_gw-publics",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:security-group/sg-0fa302ae1ed34b8bb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fa302ae1ed34b8bb",
            "ingress": [],
            "name": "inetAccess",
            "name_prefix": "",
            "owner_id": "111644099040",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_page-lb_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:security-group/sg-0718cd160dd2781a9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0718cd160dd2781a9",
            "ingress": [],
            "name": "web_page-lb_test",
            "name_prefix": "",
            "owner_id": "111644099040",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2477264639",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0718cd160dd2781a9",
            "security_group_rule_id": "sgr-0b1934944e6cb489d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_page-lb_test",
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inet_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-297842843",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fa302ae1ed34b8bb",
            "security_group_rule_id": "sgr-0fde0da73e8da61dd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.inet_access",
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inet_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3604696541",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa302ae1ed34b8bb",
            "security_group_rule_id": "sgr-0652d19fb17c3b1f6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.inet_access",
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inet_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2597859926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa302ae1ed34b8bb",
            "security_group_rule_id": "sgr-077465897e0104176",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.inet_access",
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3999201219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0718cd160dd2781a9",
            "security_group_rule_id": "sgr-0846ea3a9acdaa280",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_page-lb_test",
            "aws_vpc.lb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:subnet/subnet-02b47f976e678ffd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b47f976e678ffd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111644099040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "az_name": "eu-west-2a"
            },
            "tags_all": {
              "az_name": "eu-west-2a"
            },
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "dependencies": [
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:subnet/subnet-0c3890a23c571bac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3890a23c571bac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111644099040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "az_name": "eu-west-2b"
            },
            "tags_all": {
              "az_name": "eu-west-2b"
            },
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "dependencies": [
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:subnet/subnet-0e9baff4fed2a8d57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9baff4fed2a8d57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111644099040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "az_name": "eu-west-2c"
            },
            "tags_all": {
              "az_name": "eu-west-2c"
            },
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "dependencies": [
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:subnet/subnet-01d61403e2b75300a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d61403e2b75300a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111644099040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "az_name": "eu-west-2a"
            },
            "tags_all": {
              "az_name": "eu-west-2a"
            },
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "dependencies": [
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:subnet/subnet-03e79bf4c7f22266b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e79bf4c7f22266b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111644099040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "az_name": "eu-west-2b"
            },
            "tags_all": {
              "az_name": "eu-west-2b"
            },
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "dependencies": [
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:subnet/subnet-09054fdec55f55646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09054fdec55f55646",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111644099040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "az_name": "eu-west-2c"
            },
            "tags_all": {
              "az_name": "eu-west-2c"
            },
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "dependencies": [
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lb_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:vpc/vpc-0cc42fd2aa2b0ac41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b35ce115f4312eb7",
            "default_route_table_id": "rtb-08480c10f9cbf8168",
            "default_security_group_id": "sg-0e5bcc9e49a58a6b1",
            "dhcp_options_id": "dopt-0bd797b99b4ae1991",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc42fd2aa2b0ac41",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08480c10f9cbf8168",
            "owner_id": "111644099040"
          }
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2a\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0154d583dd707a1c6",
            "domain": "vpc",
            "id": "eipalloc-0154d583dd707a1c6",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-145-135.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.145.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2a\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-pub_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0154d583dd707a1c6",
            "association_id": "eipassoc-071b71a6733753182",
            "connectivity_type": "public",
            "id": "nat-03860eb661dd3606a",
            "network_interface_id": "eni-08301028aa9859d08",
            "private_ip": "10.0.2.122",
            "public_ip": "13.43.145.135",
            "subnet_id": "subnet-01d61403e2b75300a"
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_eip.nat_gw-ip"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2a\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b15a424dc76582f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03860eb661dd3606a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b15a424dc76582f4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_eip.nat_gw-ip",
            "module.nat_access.aws_nat_gateway.nat-pub_pvt",
            "module.nat_access.aws_route_table.nat_gw-public_private"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2a\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gw-public_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:route-table/rtb-0b15a424dc76582f4",
            "id": "rtb-0b15a424dc76582f4",
            "owner_id": "111644099040",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2a\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_gw-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc0babcfe1b918b6",
            "route_table_id": "rtb-0b15a424dc76582f4",
            "subnet_id": "subnet-02b47f976e678ffd7"
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_route_table.nat_gw-public_private"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2b\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0538f555461e74976",
            "domain": "vpc",
            "id": "eipalloc-0538f555461e74976",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-42-202-76.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.202.76",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2b\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-pub_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0538f555461e74976",
            "association_id": "eipassoc-0432181731c28d4aa",
            "connectivity_type": "public",
            "id": "nat-05fa4bfafdeebf803",
            "network_interface_id": "eni-00bce8798a1c3355a",
            "private_ip": "10.0.4.25",
            "public_ip": "13.42.202.76",
            "subnet_id": "subnet-03e79bf4c7f22266b"
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_eip.nat_gw-ip"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2b\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07712d372f88f1dc71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05fa4bfafdeebf803",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07712d372f88f1dc7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_eip.nat_gw-ip",
            "module.nat_access.aws_nat_gateway.nat-pub_pvt",
            "module.nat_access.aws_route_table.nat_gw-public_private"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2b\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gw-public_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:route-table/rtb-07712d372f88f1dc7",
            "id": "rtb-07712d372f88f1dc7",
            "owner_id": "111644099040",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2b\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_gw-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01acd8bfce5f3b867",
            "route_table_id": "rtb-07712d372f88f1dc7",
            "subnet_id": "subnet-0c3890a23c571bac2"
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_route_table.nat_gw-public_private"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2c\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e472d5e1538ebdf1",
            "domain": "vpc",
            "id": "eipalloc-0e472d5e1538ebdf1",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-171-115-213.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.115.213",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2c\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-pub_pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e472d5e1538ebdf1",
            "association_id": "eipassoc-0e663b392fc697584",
            "connectivity_type": "public",
            "id": "nat-086c3fc0d12022cb5",
            "network_interface_id": "eni-092a34d011a3c8ed7",
            "private_ip": "10.0.6.86",
            "public_ip": "18.171.115.213",
            "subnet_id": "subnet-09054fdec55f55646"
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_eip.nat_gw-ip"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2c\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06ca660f88d4a05d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-086c3fc0d12022cb5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ca660f88d4a05d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_eip.nat_gw-ip",
            "module.nat_access.aws_nat_gateway.nat-pub_pvt",
            "module.nat_access.aws_route_table.nat_gw-public_private"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2c\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gw-public_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:111644099040:route-table/rtb-06ca660f88d4a05d0",
            "id": "rtb-06ca660f88d4a05d0",
            "owner_id": "111644099040",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc42fd2aa2b0ac41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat_access[\"eu-west-2c\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_gw-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b17d14986a6e431",
            "route_table_id": "rtb-06ca660f88d4a05d0",
            "subnet_id": "subnet-0e9baff4fed2a8d57"
          },
          "dependencies": [
            "aws_internet_gateway.lb_test",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.lb_test",
            "data.aws_availability_zones.available",
            "module.nat_access.aws_route_table.nat_gw-public_private"
          ]
        }
      ]
    }
  ]
}